       it was not read from the `.my.cnf` file, as it's more secure to let
       the client use `.my.cnf`, and it eliminates a warning from recent
       versions of the client. Thanks to Kiel R Stirling for the fix (#484)!
     - Added a note to the tutorials to skip setting the `engine.$engine.client`
       config when using the Docker image.

1.0.0  2019-06-04T12:56:22Z
     - Fixed test failure due to a hard-coded system error that may be
       localized on non-en-US hosts. Thanks to Slaven Rezić for the catch
       (#427).
     - Now require Test::MockModule 0.17 to silence a warning during testing.
       Thanks to Slaven Rezić for the suggestion.
     - Fixed an error when Sqitch is run with no arguments. Thanks to Henrik
       Tudborg for the report (#428).
     - Fixed missing dependency on IO::Pager in the distribution metadata.
     - Removed use of File::HomeDir, thanks to a PR from Karen Etheridge
       (#433).
     - Updated the tagline from "Sane database change management" to "Sensible
       database change management" out of sensitivity to those subject to
       mental illness (#435).
     - Removed double-quoting of SQLite commands on Windows, inadvertently
       added by the workaround for Windows quoting in v0.9999.
     - Fixed a Snowflake issue where Sqitch failed to recognize the proper
       error code for a missing table and therefore an uninitialized registry.
       Thanks to @lerouxt and @kulmam92 for the report and fix (#439).
     - Added check for project initialization when no engine config can be
       found. When run from a directory with no configuration, Sqitch now
       reports that the project is not initialized instead of complaining
       about a lack of engine config (#437).
     - Documented Snowflake key pair authentication in
       `sqitch-authentication`, as well as `$SNOWSQL_PRIVATE_KEY_PASSPHRASE`
       in `sqitch-environment`. Thanks to Casey Largent for figuring it out
       (#441).